apps/argocd/argocd/argocd-webhook-httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webhook-external
  labels:
    home-operations.com/pihole: ignore
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  hostnames:
    - cd.darkflame.dev
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/webhook
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
